Updated Calendar overlapping issue

--- a/assets/sass/_extra.scss
+++ b/assets/sass/_extra.scss
@@ -3998,6 +3998,10 @@ body.single-dining #hero--single figure img.desktop {
 }
 
 /* Tribe Calendar */
+.calendar-grid-wrapper .tribe-common--breakpoint-medium.tribe-events .tribe-events-calendar-month__multiday-event-wrapper {
+  height: auto !important;
+  min-height: 10px;
+}
 .tribe-events-view--shortcode {
   .tribe-events-calendar-month__events:has(.tribe-events-calendar-month__multiday-event-wrapper) {
     article.hentry {
